# msit-dl

./: .gitignore  README.md  msit_dl.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
